--- a/src/main/resources/frontend/dealership-app/src/app/user/profile/profile.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/profile/profile.component.html
@@ -1,15 +1,15 @@
 <app-header></app-header>
-<div class="container" *ngIf="currentUser">
+<div class="container-info" *ngIf="currentUser">
   <header class="jumbotron">
     <h3>
       <strong>{{ currentUser.username }}</strong> Profile
     </h3>
   </header>
-  <p>
-    <strong>Token:</strong>
-    {{ currentUser.accessToken.substring(0, 20) }} ...
-    {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}
-  </p>
+<!--  <p>-->
+<!--    <strong>Token:</strong>-->
+<!--    {{ currentUser.accessToken.substring(0, 20) }} ...-->
+<!--    {{ currentUser.accessToken.substr(currentUser.accessToken.length - 20) }}-->
+<!--  </p>-->
   <p>
     <strong>Email:</strong>
     {{ currentUser.email }}
@@ -22,9 +22,11 @@
   </ul>
 </div>
 
-<section *ngIf="carLength !== 0">
+<section *ngIf="carLength !== 0" class="container">
   <h2>My Listings: </h2>
-  <app-listing-item *ngFor="let car of cars" [car] = "car"></app-listing-item>
+  <div *ngFor="let car of cars" class="listing">
+    <app-listing-item  [car] = "car"></app-listing-item>
+  </div>
 </section>
 
 <section *ngIf="carLength === 0">
@@ -33,7 +35,10 @@
 
 <section *ngIf="reviewLength !== 0">
   <h2>My reviews: </h2>
-  <app-review-item *ngFor="let review of reviews" [review]="review" [carId]="review.car_id"></app-review-item>
+  <div *ngFor="let review of reviews" >
+    <app-review-item  [review]="review" [carId]="review.car_id"></app-review-item>
+  </div>
+
 </section>
 
 <section *ngIf="reviewLength === 0">
