--- a/src/main/resources/frontend/dealership-app/src/app/listing/create/create.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/create/create.component.html
@@ -89,22 +89,26 @@
         <div class="form-group text">
           <label for="mainImage">Main Image</label>
           <input id="mainImage" name="mainImage" class="form-control" formControlName="mainImage" [(ngModel)]="pictureUrl" type="url" value="{{pictureUrl}}" readonly>
-          <input id="mainImageURL" type="file" name="mainImage" (change)="uploadMainPhotoToCloud($event)" />
+          <input id="mainImageURL" type="file" name="mainImage" formControlName="mainImageFile" (change)="uploadMainPhotoToCloud($event)" />
           <span class="text-danger" *ngIf="form.get('mainImage').touched && form.get('mainImage').errors?.required">Main image is required.</span>
+          <span class="text-danger" *ngIf="form.get('mainImageFile').touched && form.get('mainImageFile').errors?.inValidExt">File type must be jpg, jpeg or png.</span>
+          <span class="text-danger" *ngIf="form.get('thirdImageFile').touched && form.get('thirdImageFile').errors?.inValidExt">File type must be jpg, jpeg or png.</span>
         </div>
 
         <div class="form-group img">
           <label for="secondImage">Second Image</label>
           <input id="secondImage" name="secondImage" class="form-control" formControlName="secondImage" [(ngModel)]="secondPicture" type="url" value="{{secondPicture}}" readonly>
-          <input id="secondImageURL" type="file" name="secondImage" (change)="uploadSecondPhotoToCloud($event)" />
+          <input id="secondImageURL" type="file" name="secondImage" formControlName="secondImageFile" (change)="uploadSecondPhotoToCloud($event)" />
           <span class="text-danger" *ngIf="form.get('secondImage').touched && form.get('secondImage').errors?.required">Second image is required.</span>
+          <span class="text-danger" *ngIf="form.get('secondImageFile').touched && form.get('secondImageFile').errors?.inValidExt">File type must be jpg, jpeg or png.</span>
         </div>
 
         <div class="form-group img">
           <label for="thirdImage">Third Image</label>
           <input id="thirdImage" name="thirdImage" class="form-control" formControlName="thirdImage" [(ngModel)]="thirdPicture" type="url" value="{{thirdPicture}}" readonly>
-          <input id="thirdImageURL" type="file" name="thirdImage" (change)="uploadThirdPhotoToCloud($event)" />
+          <input id="thirdImageURL" type="file" name="thirdImage" formControlName="thirdImageFile" (change)="uploadThirdPhotoToCloud($event)" />
           <span class="text-danger" *ngIf="form.get('thirdImage').touched && form.get('thirdImage').errors?.required">Third image is required.</span>
+          <span class="text-danger" *ngIf="form.get('thirdImageFile').touched && form.get('thirdImageFile').errors?.inValidExt">File type must be jpg, jpeg or png.</span>
         </div>
 
         <div class="form-group text">
